# session_02

coursework/race/: race.sln
coursework/race/race/: race.vcxproj  race.vcxproj.filters
coursework/race/src/: race.cpp
coursework/race_simulator/: race_simulator.sln  Название сущностей проекта.txt
coursework/race_simulator/lib/: Input.h  Racers.cpp  Racers.h  Types.cpp  Types.h  Vehicle.h  Vehicle_air.h  Vehicle_base.h  Vehicle_land.h
coursework/race_simulator/race_simulator/: race_simulator.cpp  race_simulator.vcxproj  race_simulator.vcxproj.filters
coursework/simulator/: simulator.sln
coursework/simulator/includes/: dialogues.h  input.h  localisation.h  racer.h
coursework/simulator/simulator/: simulator.cpp  simulator.vcxproj  simulator.vcxproj.filters
coursework/simulator/src/: dialogues.cpp  racer.cpp
coursework/vehicle/: vehicle.sln
coursework/vehicle/src/: vehicle_air.cpp  vehicle_land.cpp
coursework/vehicle/vehicle/: vehicle.vcxproj  vehicle.vcxproj.filters
homework_02_01/homework_02_01_01/: homework_02_01_01.sln
homework_02_01/homework_02_01_01/homework_02_01_01/: array.h  homework_02_01_01.cpp  homework_02_01_01.vcxproj  homework_02_01_01.vcxproj.filters
homework_02_02/homework_02_02_01/: homework_02_02_01.sln
homework_02_02/homework_02_02_01/homework_02_02_01/: homework_02_02_01.cpp  homework_02_02_01.vcxproj  homework_02_02_01.vcxproj.filters
homework_02_02/homework_02_02_02/: homework_02_02_02.sln
homework_02_02/homework_02_02_02/homework_02_02_02/: homework_02_02_02.cpp  homework_02_02_02.vcxproj  homework_02_02_02.vcxproj.filters  localisation.h
homework_02_02/homework_02_02_03/: homework_02_02_03.sln
homework_02_02/homework_02_02_03/homework_02_02_03/: homework_02_02_03.cpp  homework_02_02_03.vcxproj  homework_02_02_03.vcxproj.filters
homework_02_03/homework_02_03_01/: homework_02_03_01.sln
homework_02_03/homework_02_03_01/homework_02_03_01/: calculator.cpp  calculator.h  homework_02_03_01.cpp  homework_02_03_01.vcxproj  homework_02_03_01.vcxproj.filters
homework_02_03/homework_02_03_02/: homework_02_03_02.sln
homework_02_03/homework_02_03_02/homework_02_03_02/: counter.cpp  counter.h  homework_02_03_02.cpp  homework_02_03_02.vcxproj  homework_02_03_02.vcxproj.filters  localisation.h
homework_02_04/homework_02_04_01/: homework_02_04_01.sln
homework_02_04/homework_02_04_01/homework_02_04_01/: address.cpp  address.h  homework_02_04_01.cpp  homework_02_04_01.vcxproj  homework_02_04_01.vcxproj.filters  localisation.h
homework_02_04/homework_02_04_02/: homework_02_04_02.sln
homework_02_04/homework_02_04_02/homework_02_04_02/: address.cpp  address.h  array.h  homework_02_04_02.cpp  homework_02_04_02.vcxproj  homework_02_04_02.vcxproj.filters  in.txt  utilities.h
homework_02_05/homework_02_05_01/: homework_02_05_01.sln
homework_02_05/homework_02_05_01/homework_02_05_01/: homework_02_05_01.cpp  homework_02_05_01.vcxproj  homework_02_05_01.vcxproj.filters  localisation.h  quadrilateral.cpp  quadrilateral.h  shape.cpp  shape.h  triangle.cpp  triangle.h
homework_02_05/homework_02_05_02/: homework_02_05_02.sln
homework_02_05/homework_02_05_02/homework_02_05_02/: Equilateral.h  Isosceles.h  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Rectangle.h  Rectangular.h  Rhombus.h  Square.h  Triangle.cpp  Triangle.h  homework_02_05_02.cpp  homework_02_05_02.vcxproj  homework_02_05_02.vcxproj.filters  localisation.h  shape.h
homework_02_05/homework_02_05_03/: homework_02_05_03.sln
homework_02_05/homework_02_05_03/homework_02_05_03/: IShape.cpp  IShape.h  Quadrilateral.h  Shape.cpp  Shape.h  Triangle.h  homework_02_05_03.cpp  homework_02_05_03.vcxproj  homework_02_05_03.vcxproj.filters  localisation.h
homework_02_06/homework_02_06_01/: homework_02_06_01.sln
homework_02_06/homework_02_06_02/: homework_02_06_02.sln
homework_02_06/homework_02_06_02/homework_02_06_02/: counter.cpp  (+5 more)
homework_02_07/homework_02_07_01/: homework_02_07_01.sln
homework_02_07/homework_02_07_02/: homework_02_07_02.sln
homework_02_08/homework_02_08_01/: homework_02_08_01.sln
homework_02_08/homework_02_08_02/: homework_02_08_02.sln
homework_02_09/homework_02_09_01/: homework_02_09_01.sln
homework_02_09/homework_02_09_02/: homework_02_09_02.sln
homework_02_10/homework_02_10_01/: CMakeLists.txt  homework_02_10_01.cpp
homework_02_10/homework_02_10_01/homework_02_10_01/: CMakeLists.txt  Localisation.h  homework_02_10_01.cpp
homework_02_10/homework_02_10_02/: CMakeLists.txt  homework_02_10_02.cpp
homework_02_10/homework_02_10_02/homework_02_10_02/: CMakeLists.txt  homework_02_10_02.cpp
homework_02_10/homework_02_10_02/includes/: Quadrangle.h
homework_02_10/homework_02_10_02/lib/geo/: IShape.cpp  IShape.h  Quadrilateral.h  Shape.cpp  Triangle.h
homework_02_11/homework_02_11_01/: homework_02_11_01.sln
homework_02_11/homework_02_11_02/: homework_02_11_02.sln
homework_02_11/homework_02_11_03/: CMakeLists.txt
homework_02_11/homework_02_11_03/homework_02_11_03/: CMakeLists.txt  homework_02_11_03.cpp  homework_02_11_03.h
homework_02_11/homework_02_11_03/lib/: CMakeLists.txt  Greeter.h  Leaver.h
homework_02_11/homework_02_11_03/lib/geo/: Geometric_shapes.cpp  Shape.cpp  Shape.h  Triangle.h
homework_02_11/homework_02_11_04/: homework_02_11_04.sln
homework_02_11/homework_02_11_05/: CMakeLists.txt
homework_02_11/homework_02_11_05/homework_02_11_05/: CMakeLists.txt  homework_02_11_05.cpp
homework_02_11/homework_02_11_05/lib/: CMakeLists.txt  Geometric.cpp  Shape.h  Types.h
lib/: Exceptions.h
lib/Addressing_someone/: Addressing_someone.sln
lib/Geometric/: Geometric.sln
lib/Geometric_shapes/: Geometric_shapes.sln
lib/Greeter/: Greeter.sln
(+75 files in other folders)
